--- a/src/css/SSLider.css
+++ b/src/css/SSLider.css
@@ -1,24 +1,41 @@
 .slider-image{
-    height: 500px;
+    height: 400px;
     object-fit: cover;
     border-radius: 20px;
-    border-color: gray;
+    border-color: rgb(30, 30, 30);
     border-style: solid;
-    border-width: 4px;
+    border-width: 2px;
 }
 
+.text-cont{
+    width: 200px;
+    overflow: hidden;
+    height: 200px;
+}
+.details{
+    font-size: 10x;
+}
+.details-d{
+    padding-left: 20px;
+}
 @media (max-width:700px) {
     .slider-image{
-        height: 200px;
+        height: 100px;
         border-radius: 5px;
     }
     .text-cont{
-        width: 300px;
-          overflow: hidden;
-        height: 200px;
+        width: 60px;
+        overflow: hidden;
+        height: 100px;
      
+    }
+    .details{
+        font-size: 4px;
     }
     .para{
         display: none;
+    }
+    .details-d{
+        padding-left: 0px;
     }
 }
